# uRayTracer1D

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/actions/prepare-environment/: action.yaml
.github/workflows/: build.yaml
cmake/: uRayTracer1DConfig.cmake.in
include/uRayTracer1D/: receiver.hpp  source.hpp
include/uRayTracer1D/acoustic/: constantLayer.hpp  model.hpp  path.hpp  segment.hpp
src/: receiver.cpp  source.cpp  version.cpp  version.hpp.in
src/acoustic/: constantLayer.cpp  model.cpp  path.cpp  segment.cpp
testing/: receiver.cpp  source.cpp
testing/acoustic/: model.cpp
